added preload to img

--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  >
     <meta charset="UTF-8" />
     <meta
       name="description"
       content="URL Shortener to optimize and reduce the length of your links with ease."
     />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preload" href="/logosm.png" as="image"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
